--- a/homework.ipynb
+++ b/homework.ipynb
@@ -619,20 +619,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
-    "\n",
-    "p10 = ..."
+    "mag = [1.31, 2.13, -0.92]\n",
+    "magn = np.linalg.norm(mag)\n",
+    "# print(magn) \n",
+    "p10 = [1.31/magn, 2.13/magn, -0.92/magn]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(0.4916550139961552),\n",
+       " np.float64(0.7994085342074889),\n",
+       " np.float64(-0.3452844373102769)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p10"
    ]
