--- a/homework.ipynb
+++ b/homework.ipynb
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        " 'lion': array([0.1, 0.7, 0.2])}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,27 +873,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
-    "\n",
-    "p15 = ..."
+    "# cat 0.9960065188076063\n",
+    "# dog 0.9666666666666667\n",
+    "#elephant 0.5034965460952285\n",
+    "#giraffe 0.3222516933177447\n",
+    "#lion 0.9938079899999067\n",
+    "v15 = [0.1,0.5,0.2]\n",
+    "dot = np.dot(v15, q15['lion'])\n",
+    "sum_v = sum(component**2 for component in v15)\n",
+    "sqrt_v = math.sqrt(sum_v)\n",
+    "sum_15 = sum(component**2 for component in q15['lion'])\n",
+    "sqrt_15 = math.sqrt(sum_15)\n",
+    "p15 = 'dog' # dot / (sqrt_v * sqrt_15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ellipsis"
+       "'dog'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
