--- a/homework.ipynb
+++ b/homework.ipynb
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,21 +889,21 @@
     "sqrt_v = math.sqrt(sum_v)\n",
     "sum_15 = sum(component**2 for component in q15['lion'])\n",
     "sqrt_15 = math.sqrt(sum_15)\n",
-    "p15 = 'dog' # dot / (sqrt_v * sqrt_15)"
+    "p15 = 'cat' # dot / (sqrt_v * sqrt_15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'dog'"
+       "'cat'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
