--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1082,9 +1082,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.3,  0.2,  0.9, -0.4])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# DO NOT CHANGE\n",
     "\n",
@@ -1094,9 +1105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.1,  0.3,  0.6, -0.2])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# DO NOT CHANGE\n",
     "\n",
@@ -1106,20 +1128,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
-    "\n",
-    "p18 = ..."
+    "dot = np.dot(u18 , v18)\n",
+    "sum_u = sum(component**2 for component in u18)\n",
+    "sum_v = sum(component**2 for component in v18)\n",
+    "sqrt_u = math.sqrt(sum_u)\n",
+    "sqrt_v = math.sqrt(sum_v)\n",
+    "similarity = dot / (sqrt_u * sqrt_v)\n",
+    "p18 = math.acos(similarity)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5023368499123664"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p18"
    ]
@@ -1239,7 +1277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE None "
    ]
   }
  ],
